--- a/packaging/ubuntu-16.04/changelog
+++ b/packaging/ubuntu-16.04/changelog
@@ -1,3 +1,11 @@
+snapd (2.29.2) xenial; urgency=medium
+
+  * New upstream release, LP: #1726258
+    - snapctl: disable stop/start/restart (2.29)
+    - cmd/snap-update-ns: fix collection of changes made
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 03 Nov 2017 17:17:14 +0100
+
 snapd (2.29.1) xenial; urgency=medium
 
   * New upstream release, LP: #1726258
